tests/baselines/reference/templateStringInConditionalES6.errors.txt
templateStringInConditionalES6.ts(1,9): error TS2869: Truthiness test of this kind of expression appears unintentional


==== templateStringInConditionalES6.ts (1 errors) ====
    var x = `abc${ " " }def` ? `abc${ " " }def` : `abc${ " " }def`;
            ~~~~~~~~~~~~~~~~
!!! error TS2869: Truthiness test of this kind of expression appears unintentional